Replace "extensions" translations to aligin words

--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -1026,7 +1026,7 @@ msgstr "接続の健康チェック"
 #: upstream/_guides/cassandra.adoc:550
 #, fuzzy
 msgid "If you are using the `quarkus-smallrye-health` extension, `cassandra-quarkus` will automatically add a readiness health check to validate the connection to the cluster."
-msgstr "`quarkus-smallrye-health` 拡張モジュールを使用している場合、 `cassandra-quarkus` はクラスターへの接続を検証するための準備状態の健康チェックを自動的に追加します。"
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `cassandra-quarkus` はクラスターへの接続を検証するための準備状態の健康チェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:553
