--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -163,7 +163,7 @@ msgstr ""
 #: upstream/_guides/deploying-to-openshift.adoc:70
 #, fuzzy
 msgid "Building is handled by the link:container-image#s2i[container-image-s2i] extension. To trigger a build:"
-msgstr "ビルドは link:container-image#s2i[container-image-s2i] 拡張モジュールによって処理されます。ビルドをトリガーするには"
+msgstr "ビルドは link:container-image#s2i[container-image-s2i] エクステンションによって処理されます。ビルドをトリガーするには"
 
 #. type: delimited block -
 #: upstream/_guides/deploying-to-openshift.adoc:74
@@ -786,7 +786,7 @@ msgstr "`quarkus.openshift.env.mapping.foo.from-configmap=foobar`"
 #: upstream/_guides/deploying-to-openshift.adoc:342
 #, fuzzy
 msgid "If you redefine the same variable using the new syntax while keeping the old syntax, **ONLY** the new version will be kept, and a warning will be issued to alert you of the problem. For example, if you define both `quarkus.openshift.env-vars.my-env-var.value=foobar` and `quarkus.openshift.env.vars.my-env-var=newValue`, the extension will only generate an environment variable `MY_ENV_VAR=newValue` and issue a warning."
-msgstr "古い構文を維持したまま新しい構文を使用して同じ変数を再定義した場合、新しいバージョン *のみが*保持され、警告が表示されて問題を警告します。例えば、 `quarkus.openshift.env-vars.my-env-var.value=foobar` と `quarkus.openshift.env.vars.my-env-var=newValue` の両方を定義した場合、拡張モジュールは環境変数 `MY_ENV_VAR=newValue` のみを生成し、警告を発行します。"
+msgstr "古い構文を維持したまま新しい構文を使用して同じ変数を再定義した場合、新しいバージョン *のみが*保持され、警告が表示されて問題を警告します。例えば、 `quarkus.openshift.env-vars.my-env-var.value=foobar` と `quarkus.openshift.env.vars.my-env-var=newValue` の両方を定義した場合、エクステンションは環境変数 `MY_ENV_VAR=newValue` のみを生成し、警告を発行します。"
 
 #. type: Title ====
 #: upstream/_guides/deploying-to-openshift.adoc:343
