--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -114,7 +114,7 @@ msgstr "image:dev-ui-embedded.png[alt=\"Dev UI embedded\"]"
 #: upstream/_guides/dev-ui.adoc:41
 #, fuzzy
 msgid "You have to add a file named `dev-templates/embedded.html` in your link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] extension module's resources:"
-msgstr "に `dev-templates/embedded.html` というファイルを追加しなければなりません。 link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] 拡張モジュールのリソースを使用しています。"
+msgstr "に `dev-templates/embedded.html` というファイルを追加しなければなりません。 link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] エクステンションのリソースを使用しています。"
 
 #. type: Target for macro image
 #: upstream/_guides/dev-ui.adoc:42
@@ -552,7 +552,7 @@ msgstr ""
 #: upstream/_guides/dev-ui.adoc:268
 #, fuzzy
 msgid "This can be done by adding another link:building-my-first-extension#deploying-the-greeting-feature[build step] to declare the action in your extension's link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] module:"
-msgstr "これは、別の link:building-my-first-extension#deploying-the-greeting-feature[ビルドステップを] 追加して拡張モジュールの link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] モジュールを使用しています。"
+msgstr "これは、別の link:building-my-first-extension#deploying-the-greeting-feature[ビルドステップを] 追加してエクステンションの link:building-my-first-extension#description-of-a-quarkus-extension[`deployment`] モジュールを使用しています。"
 
 #. type: delimited block -
 #: upstream/_guides/dev-ui.adoc:274
