--- a/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch.adoc.po
@@ -867,7 +867,7 @@ msgstr "クラスターヘルスチェック"
 #: upstream/_guides/elasticsearch.adoc:439
 #, fuzzy
 msgid "If you are using the `quarkus-smallrye-health` extension, both the extension will automatically add a readiness health check to validate the health of the cluster."
-msgstr "`quarkus-smallrye-health` 拡張モジュールを使用している場合、どちらの拡張モジュールも、クラスターの健全性を検証するための準備状態の健全性チェックを自動的に追加します。"
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、どちらのエクステンションも、クラスターの健全性を検証するための準備状態の健全性チェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_guides/elasticsearch.adoc:442
