--- a/l10n/po/ja_JP/_guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc.adoc.po
@@ -41,7 +41,7 @@ msgstr "一般的に、gRPCはHTTP/2、TLS、 link:https://developers.google.com
 #: upstream/_guides/grpc.adoc:19
 #, fuzzy
 msgid "The Quarkus gRPC extension integrate gRPC in Quarkus application.  It:"
-msgstr "QuarkusのgRPC拡張機能は、QuarkusアプリケーションにgRPCを統合します。それは"
+msgstr "QuarkusのgRPCエクステンションは、QuarkusアプリケーションにgRPCを統合します。それは"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:21
