--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -149,7 +149,7 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:67
 #, fuzzy
 msgid "This command generates a Maven project, that imports the `micrometer-registry-prometheus` extension as a dependency.  This extension will load the core `micrometer` extension as well as additional library dependencies required to support prometheus."
-msgstr "このコマンドは、 `micrometer-registry-prometheus` 拡張モジュールを依存関係としてインポートする Maven プロジェクトを生成します。このエクステンションは、 `micrometer` エクステンションだけでなく、 prometheus をサポートするために必要な追加のライブラリ依存関係もロードします。"
+msgstr "このコマンドは、 `micrometer-registry-prometheus` エクステンションを依存関係としてインポートする Maven プロジェクトを生成します。このエクステンションは、 `micrometer` エクステンションだけでなく、 prometheus をサポートするために必要な追加のライブラリ依存関係もロードします。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:70
@@ -508,7 +508,7 @@ msgstr "MeterFilter を使ってメトリクスを設定する"
 #: upstream/_guides/micrometer.adoc:290
 #, fuzzy
 msgid "Micrometer uses `MeterFilter` instances to customize the metrics emitted by `MeterRegistry` instances.  The Micrometer extension will detect `MeterFilter` CDI beans and use them when initializing `MeterRegistry` instances."
-msgstr "Micrometer は `MeterFilter` インスタンスを使用して、 `MeterRegistry` インスタンスが発するメトリクスをカスタマイズします。Micrometer 拡張モジュールは `MeterFilter` CDI Beanを検出し、 `MeterRegistry` インスタンスを初期化する際に使用します。"
+msgstr "Micrometer は `MeterFilter` インスタンスを使用して、 `MeterRegistry` インスタンスが発するメトリクスをカスタマイズします。Micrometer エクステンションは `MeterFilter` CDI Beanを検出し、 `MeterRegistry` インスタンスを初期化する際に使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:295
@@ -594,7 +594,7 @@ msgstr "他のレジストリー実装の使用"
 #: upstream/_guides/micrometer.adoc:348
 #, fuzzy
 msgid "If you aren't using Prometheus, you have a few options. Some Micrometer registry implementations have been wrapped in https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverse extensions].  To use the Micrometer StackDriver MeterRegistry, for example, you would use the `quarkus-micrometer-registry-stackdriver` extension:"
-msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのMicrometerのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseの拡張機能] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` 拡張モジュールを使用します。"
+msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのMicrometerのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseの拡張機能] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` エクステンションを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:355
