--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -178,7 +178,7 @@ msgstr "健康チェックの実行"
 #: upstream/_guides/microprofile-health.adoc:81
 #, fuzzy
 msgid "Importing the `smallrye-health` extension directly exposes three REST endpoints:"
-msgstr "`smallrye-health` 拡張モジュールをインポートすると、3 つの REST エンドポイントが直接公開されます。"
+msgstr "`smallrye-health` エクステンションをインポートすると、3 つの REST エンドポイントが直接公開されます。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:83
