--- a/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
@@ -224,7 +224,7 @@ msgstr "Jaeger extension ( `quarkus-jaeger` )。"
 #: upstream/_guides/native-and-ssl.adoc:84
 #, fuzzy
 msgid "the JGit extension (`quarkus-jgit`),"
-msgstr "JGit 拡張モジュール ( `quarkus-jgit` )。"
+msgstr "JGit エクステンション ( `quarkus-jgit` )。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:85
@@ -254,7 +254,7 @@ msgstr "Redis クライアント拡張機能 ( `quarkus-redis-client` )。"
 #: upstream/_guides/native-and-ssl.adoc:89
 #, fuzzy
 msgid "the MongoDB extension (`quarkus-mongodb-client`),"
-msgstr "MongoDB 拡張モジュール ( `quarkus-mongodb-client` )。"
+msgstr "MongoDB エクステンション ( `quarkus-mongodb-client` )。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:90
@@ -266,7 +266,7 @@ msgstr "Neo4j 拡張機能 ( `quarkus-neo4j` )。"
 #: upstream/_guides/native-and-ssl.adoc:91
 #, fuzzy
 msgid "the OAuth2 extension (`quarkus-elytron-security-oauth2`),"
-msgstr "OAuth2 拡張モジュール ( `quarkus-elytron-security-oauth2` )。"
+msgstr "OAuth2 エクステンション ( `quarkus-elytron-security-oauth2` )。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:92
