--- a/l10n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -405,7 +405,7 @@ msgstr "アプリケーションの設定"
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:218
 msgid "The `security-jpa` extension requires at least one datasource to access to your database."
-msgstr "`security-jpa` 拡張モジュールは、データベースにアクセスするために少なくとも一つのデータソースが必要です。"
+msgstr "`security-jpa` エクステンションは、データベースにアクセスするために少なくとも一つのデータソースが必要です。"
 
 #. type: delimited block -
 #: upstream/_guides/security-jpa.adoc:225
