--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -802,7 +802,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:363
 #, fuzzy
 msgid "The `OidcTenantConfig` returned from this method is the same used to parse the `oidc` namespace configuration from the `application.properties`. You can populate it using any of the settings supported by the `quarkus-oidc` extension."
-msgstr "このメソッドから返される `OidcTenantConfig` は、 `application.properties` から `oidc` ネームスペース構成を解析するために使用されるものと同じです。 `quarkus-oidc` 拡張モジュールでサポートされている任意の設定を使用して、これを入力することができます。"
+msgstr "このメソッドから返される `OidcTenantConfig` は、 `application.properties` から `oidc` ネームスペース構成を解析するために使用されるものと同じです。 `quarkus-oidc` エクステンションでサポートされている任意の設定を使用して、これを入力することができます。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:364
