--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -131,7 +131,7 @@ msgstr ""
 #: upstream/_guides/websockets.adoc:54
 #, fuzzy
 msgid "This command generates the Maven project (without any classes) and import the `undertow-websockets` extension."
-msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` 拡張モジュールをインポートします。"
+msgstr "このコマンドは、Mavenプロジェクト(クラスなし)を生成し、 `undertow-websockets` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:57
