--- a/l10n/po/ja_JP/_posts/2019-11-06-gowithflow-chooses-quarkus-to-deliver-fast-to-production.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-06-gowithflow-chooses-quarkus-to-deliver-fast-to-production.adoc.po
@@ -176,13 +176,13 @@ msgstr "学習曲線の少ない豊富な機能"
 #: upstream/_posts/2019-11-06-gowithflow-chooses-quarkus-to-deliver-fast-to-production.adoc:45
 #, fuzzy
 msgid "Besides its low memory consumption and lightning fast startup time, GoWithFlow selected Quarkus because of the rich set of frameworks, extensions, and rich functionality included with it. Raul describes Quarkus as _\"an incredible integration project that includes functionality, like MicroProfile, Vert.x, Kafka, and Keycloak, and many others.\"_"
-msgstr "低メモリー消費と高速起動時間に加えて、GoWithFlowがQuarkusを選択した理由は、フレームワーク、拡張機能、豊富な機能のセットが含まれているからです。ラウルはQuarkusを _\"MicroProfile、Vert.x、Kafka、Keycloak、その他多くの機能を含む信じられないほどの統合プロジェクト\"_ と表現しています。"
+msgstr "低メモリー消費と高速起動時間に加えて、GoWithFlowがQuarkusを選択した理由は、フレームワーク、エクステンション、豊富な機能のセットが含まれているからです。ラウルはQuarkusを _\"MicroProfile、Vert.x、Kafka、Keycloak、その他多くの機能を含む信じられないほどの統合プロジェクト\"_ と表現しています。"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-06-gowithflow-chooses-quarkus-to-deliver-fast-to-production.adoc:47
 #, fuzzy
 msgid "Because Quarkus extensions are composed of frameworks and functionality that GoWithFlow developers already knew, it was very easy for them to learn and quickly become productive. Although Quarkus introduces innovative technology for running Java on the cloud and containers, developers found it familiar and were able to pick it up with a small learning curve because all its extensions were familiar to them. Nevertheless, they did spend some time familiarizing themselves with aspects related to native images and features for which Quarkus did not yet have extensions."
-msgstr "Quarkusの拡張機能は、GoWithFlowの開発者がすでに知っているフレームワークや機能で構成されているため、非常に簡単に習得でき、すぐに生産性を上げることができました。Quarkusは、クラウドとコンテナー上でJavaを実行するための革新的な技術を導入していますが、開発者はそれが身近なものであることに気付き、その拡張機能はすべて彼らにとって身近なものであったため、小さな学習曲線でそれを手に入れることができました。それにもかかわらず、ネイティブイメージやQuarkusにはまだ拡張機能がない機能に慣れるまでに時間がかかりました。"
+msgstr "Quarkusのエクステンションは、GoWithFlowの開発者がすでに知っているフレームワークや機能で構成されているため、非常に簡単に習得でき、すぐに生産性を上げることができました。Quarkusは、クラウドとコンテナー上でJavaを実行するための革新的な技術を導入していますが、開発者はそれが身近なものであることに気付き、そのエクステンションはすべて彼らにとって身近なものであったため、小さな学習曲線でそれを手に入れることができました。それにもかかわらず、ネイティブイメージやQuarkusにはまだエクステンションがない機能に慣れるまでに時間がかかりました。"
 
 #. type: Title ==
 #: upstream/_posts/2019-11-06-gowithflow-chooses-quarkus-to-deliver-fast-to-production.adoc:48
