--- a/l10n/po/ja_JP/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc.po
@@ -74,7 +74,7 @@ msgstr "link:#gradle-debug-quarkus-project[Gradle - デバッグQuarkusプロジ
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:23
 #, fuzzy
 msgid "link:#gradle-add-extensions-to-a-quarkus-project[Gradle - Add extensions to a Quarkus project]"
-msgstr "link:#gradle-add-extensions-to-a-quarkus-project[Gradle - Quarkusプロジェクトに拡張機能を追加する]"
+msgstr "link:#gradle-add-extensions-to-a-quarkus-project[Gradle - Quarkusプロジェクトにエクステンションを追加する]"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:24
@@ -194,26 +194,26 @@ msgstr ""
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:59
 #, fuzzy, no-wrap
 msgid "Gradle - Add extensions to a Quarkus project"
-msgstr "Gradle - Quarkusプロジェクトに拡張機能を追加する"
+msgstr "Gradle - Quarkusプロジェクトにエクステンションを追加する"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:63
 #, fuzzy
 msgid "The add extensions wizard now supports adding Quarkus extensions to Gradle projects.  To view the list of extensions to add, open the VS Code command palette and call the `Quarkus: Add extensions to current project` command."
-msgstr "拡張機能の追加ウィザードでは、Quarkusの拡張機能をGradleプロジェクトに追加できるようになりました。追加する拡張機能のリストを表示するには、VS Codeコマンドパレットを開き、 `Quarkus: Add extensions to current project` コマンドを呼び出します。"
+msgstr "エクステンションの追加ウィザードでは、QuarkusのエクステンションをGradleプロジェクトに追加できるようになりました。追加するエクステンションのリストを表示するには、VS Codeコマンドパレットを開き、 `Quarkus: Add extensions to current project` コマンドを呼び出します。"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:65
 #, fuzzy
 msgid "Here, the Eclipse Vert.x extension was added:"
-msgstr "ここでは、Eclipse Vert.xの拡張機能を追加しました。"
+msgstr "ここでは、Eclipse Vert.xのエクステンションを追加しました。"
 
 #. type: Named 'alt' AttributeList argument for macro 'image'
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:66
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:72
 #, fuzzy, no-wrap
 msgid "Adding an extension to Gradle project"
-msgstr "Gradleプロジェクトに拡張機能を追加する"
+msgstr "Gradleプロジェクトにエクステンションを追加する"
 
 #. type: Target for macro image
 #: upstream/_posts/2019-11-21-vscode-quarkus-1.2.0.adoc:66
