--- a/l10n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
@@ -376,7 +376,7 @@ msgstr "リアクティブは好きですか?MongoDBは好きですか?シンプ
 #: upstream/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc:141
 #, fuzzy
 msgid "Here comes the Reactive MongoDB with Panache extension.  More details in https://quarkus.io/guides/mongodb-panache[the MongoDB with Panache documentation]."
-msgstr "Reactive MongoDB with Panache 拡張モジュールの登場です。詳細は link:https://quarkus.io/guides/mongodb-panache[MongoDB with Panache のドキュメント] をご覧ください。"
+msgstr "Reactive MongoDB with Panache エクステンションの登場です。詳細は link:https://quarkus.io/guides/mongodb-panache[MongoDB with Panache のドキュメント] をご覧ください。"
 
 #. type: Title ===
 #: upstream/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc:142
