--- a/l10n/po/ja_JP/_posts/2020-06-25-quarkus-grpc.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-25-quarkus-grpc.adoc.po
@@ -152,7 +152,7 @@ msgstr ""
 #: upstream/_posts/2020-06-25-quarkus-grpc.adoc:59
 #, fuzzy, no-wrap
 msgid "Add the quarkus-grpc extension to an existing project"
-msgstr "既存のプロジェクトに quarkus-grpc 拡張モジュールを追加します。"
+msgstr "既存のプロジェクトに quarkus-grpc エクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-06-25-quarkus-grpc.adoc:62
