--- a/l10n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-02-mutiny-redis.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:41
 #, fuzzy
 msgid "Note that in Quarkus, you should use the Redis extension directly, which exposes a similar API. Enrico wanted to use the Vert.x Redis Client directly."
-msgstr "Quarkusでは、同様のAPIを公開しているRedis拡張機能を直接使用する必要があることに注意してください。EnricoはVert.x Redis Clientを直接使いたいと考えていました。"
+msgstr "Quarkusでは、同様のAPIを公開しているRedisエクステンションを直接使用する必要があることに注意してください。EnricoはVert.x Redis Clientを直接使いたいと考えていました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-02-mutiny-redis.adoc:43
