--- a/l10n/po/ja_JP/_posts/2020-10-19-micrometer-metrics.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-19-micrometer-metrics.adoc.po
@@ -46,7 +46,7 @@ msgstr ""
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:13
 #, fuzzy
 msgid "Though Quarkus offers extensions for MicroProfile, including metrics, we're now recommending the use of the Micrometer extension for metrics in Quarkus with the release of 1.9."
-msgstr "Quarkusはメトリクスを含むMicroProfile用の拡張機能を提供していますが、1.9のリリースでは、Quarkusのメトリクス用にMicrometer拡張機能の使用を推奨しています。"
+msgstr "Quarkusはメトリクスを含むMicroProfile用のエクステンションを提供していますが、1.9のリリースでは、Quarkusのメトリクス用にMicrometerエクステンションの使用を推奨しています。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:14
@@ -126,7 +126,7 @@ msgstr ""
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:70
 #, fuzzy
 msgid "With Quarkus, the Micrometer extension emits the same HTTP endpoint metric irrespective of whether it was created by JAX-RS, Vert.x, or Undertow without the developer needing to add anything to their code.  The only effort required is to activate metrics."
-msgstr "Quarkusを使用すると、JAX-RS、Vert.x、Undertowのいずれで作成されたかに関係なく、Micrometer拡張機能が同じHTTPエンドポイントメトリックを出力します。必要な作業は、メトリクスを有効化することだけです。"
+msgstr "Quarkusを使用すると、JAX-RS、Vert.x、Undertowのいずれで作成されたかに関係なく、Micrometerエクステンションが同じHTTPエンドポイントメトリックを出力します。必要な作業は、メトリクスを有効化することだけです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-19-micrometer-metrics.adoc:73
