--- a/l10n/po/ja_JP/_posts/2020-10-21-quarkus-1-9-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-21-quarkus-1-9-0-final-released.adoc.po
@@ -271,7 +271,7 @@ msgstr "エクステンションの開発をリードしたい場合は、 link:
 #. type: Plain text
 #: upstream/_posts/2020-10-21-quarkus-1-9-0-final-released.adoc:99
 msgid "A blog post is in the works and should give more details.  In the meantime, check out https://github.com/search?q=topic%3Aquarkus-extension+org%3Aquarkiverse&type=Repositories[the extensions that are already there]."
-msgstr "ブログ記事を作成中ですので、そちらで詳細をお知らせします。それまでは、 link:https://github.com/search?q=topic%3Aquarkus-extension+org%3Aquarkiverse&type=Repositories[すでにある拡張機能] をチェックしてみてください。"
+msgstr "ブログ記事を作成中ですので、そちらで詳細をお知らせします。それまでは、 link:https://github.com/search?q=topic%3Aquarkus-extension+org%3Aquarkiverse&type=Repositories[すでにあるエクステンション] をチェックしてみてください。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-21-quarkus-1-9-0-final-released.adoc:100
