--- a/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-12-03-quarkiverse.adoc.po
@@ -188,7 +188,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:73
 msgid "The *deployment*, *runtime* and *integration-test* directories containing the extension classes. See link:https://quarkus.io/guides/writing-extensions#create-new-extension-modules-using-maven[How to create new extension modules using Maven] for more details."
-msgstr "*デプロイメント* 、 *ランタイム* 、および *統合テスト* のディレクトリーがエクステンションクラスを含みます。詳細は「 https://quarkus.io/guides/writing-extensions#create-new-extension-modules-using-maven[Mavenを使って新しい拡張モジュールを作成する方法]」を参照してください。"
+msgstr "*デプロイメント* 、 *ランタイム* 、および *統合テスト* のディレクトリーがエクステンションクラスを含みます。詳細は「 https://quarkus.io/guides/writing-extensions#create-new-extension-modules-using-maven[Mavenを使って新しいエクステンションを作成する方法]」を参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-12-03-quarkiverse.adoc:74
