--- a/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions.adoc.po
@@ -212,7 +212,7 @@ msgstr "機能の選択"
 #: upstream/_guides/gcp-functions.adoc:87
 #, fuzzy
 msgid "The `quarkus-google-cloud-functions` extension scans your project for a class that directly implements the Google Cloud `HttpFunction`, `BackgroundFunction` or `RawBackgroundFunction` interface.  It must find a class in your project that implements one of these interfaces or it will throw a build time failure.  If it finds more than one function classes, a build time exception will also be thrown."
-msgstr "`quarkus-google-cloud-functions` 拡張モジュールは、Google Cloud `HttpFunction` 、 `BackgroundFunction` 、または `RawBackgroundFunction` インターフェイスを直接実装しているクラスをプロジェクト内でスキャンします。これらのインターフェイスを実装しているクラスをプロジェクト内で見つけなければなりません。複数の関数クラスを見つけた場合は、ビルド時の例外もスローされます。"
+msgstr "`quarkus-google-cloud-functions` エクステンションは、Google Cloud `HttpFunction` 、 `BackgroundFunction` 、または `RawBackgroundFunction` インターフェイスを直接実装しているクラスをプロジェクト内でスキャンします。これらのインターフェイスを実装しているクラスをプロジェクト内で見つけなければなりません。複数の関数クラスを見つけた場合は、ビルド時の例外もスローされます。"
 
 #. type: Plain text
 #: upstream/_guides/gcp-functions.adoc:91
