--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -2170,7 +2170,7 @@ msgstr "トピックがない場合、 `Kafka Streams topics health check` .の 
 #: upstream/_guides/kafka-streams.adoc:1194
 #, fuzzy
 msgid "You can of course disable the health check of the `quarkus-kafka-streams` extension by setting the `quarkus.kafka-streams.health.enabled` property to `false` in your `application.properties`."
-msgstr "`quarkus.kafka-streams.health.enabled` `false` もちろん、 `quarkus-kafka-streams` 拡張モジュールのヘルスチェックを無効にするには、 `application.properties` ."
+msgstr "`quarkus.kafka-streams.health.enabled` `false` もちろん、 `quarkus-kafka-streams` エクステンションのヘルスチェックを無効にするには、 `application.properties` ."
 
 #. type: Plain text
 #: upstream/_guides/kafka-streams.adoc:1196
