--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -1151,7 +1151,7 @@ msgstr "接続の健康チェック"
 #: upstream/_guides/mongodb.adoc:586
 #, fuzzy
 msgid "If you are using the `quarkus-smallrye-health` extension, `quarkus-mongodb-client` will automatically add a readiness health check to validate the connection to the cluster."
-msgstr "`quarkus-smallrye-health` 拡張モジュールを使用している場合、 `quarkus-mongodb-client` はクラスターへの接続を検証するための準備状態の健康チェックを自動的に追加します。"
+msgstr "`quarkus-smallrye-health` エクステンションを使用している場合、 `quarkus-mongodb-client` はクラスターへの接続を検証するための準備状態の健康チェックを自動的に追加します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:588
@@ -1175,7 +1175,7 @@ msgstr "メトリクス"
 #: upstream/_guides/mongodb.adoc:595
 #, fuzzy
 msgid "If you are using the `quarkus-micrometer` or `quarkus-smallrye-metrics` extension, `quarkus-mongodb-client` can provide metrics about the connection pools.  This behavior must first be enabled by setting the `quarkus.mongodb.metrics.enabled` property to `true` in your `application.properties`."
-msgstr "`quarkus-micrometer` または `quarkus-smallrye-metrics` 拡張モジュールを使用している場合、 `quarkus-mongodb-client` は接続プールに関するメトリクスを提供することができます。この動作を有効にするには、まず `application.properties` .NET Framework の `quarkus.mongodb.metrics.enabled` プロパティーを `true` に設定する必要があります。"
+msgstr "`quarkus-micrometer` または `quarkus-smallrye-metrics` エクステンションを使用している場合、 `quarkus-mongodb-client` は接続プールに関するメトリクスを提供することができます。この動作を有効にするには、まず `application.properties` .NET Framework の `quarkus.mongodb.metrics.enabled` プロパティーを `true` に設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:598
