--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -1095,7 +1095,7 @@ msgstr "Bean バリデーションの使用"
 #: upstream/_guides/reactive-routes.adoc:512
 #, fuzzy
 msgid "You can combine reactive routes and Bean Validation.  First, don't forget to add the `quarkus-hibernate-validator` extension to your project.  Then, you can add constraints to your route parameter (annotated with `@Param` or `@Body`):"
-msgstr "リアクティブルートとBean Validationを組み合わせることができます。まず、プロジェクトに `quarkus-hibernate-validator` 拡張機能を追加することを忘れないでください。次に、ルートパラメーターに制約を追加します( `@Param` または `@Body` で注釈を付けます)。"
+msgstr "リアクティブルートとBean Validationを組み合わせることができます。まず、プロジェクトに `quarkus-hibernate-validator` エクステンションを追加することを忘れないでください。次に、ルートパラメーターに制約を追加します( `@Param` または `@Body` で注釈を付けます)。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:519
