--- a/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-oauth2.adoc.po
@@ -455,7 +455,7 @@ msgstr ""
 #: upstream/_guides/security-oauth2.adoc:240
 #, fuzzy
 msgid "Excellent, we have not provided any OAuth2 token in the request, so we should not be able to access the endpoint, and we were not. Instead we received an HTTP 401 Unauthorized error. We need to obtain and pass in a valid OAuth2 token to access that endpoint. There are two steps to this, 1) configuring our {extension-name} extension with information on how to validate the token, and 2) generating a matching token with the appropriate claims."
-msgstr "素晴らしい、リクエストにOAuth2トークンを提供していないので、エンドポイントにアクセスできないはずなのですが、そうではありませんでした。代わりにHTTP 401 Unauthorizedエラーを受け取りました。エンドポイントにアクセスするためには、有効な OAuth2 トークンを取得して渡す必要があります。これには 2 つのステップがあります。1) {extension-name} 拡張モジュールにトークンの検証方法に関する情報を設定すること、そして 2) 適切な主張を持つマッチングトークンを生成することです。"
+msgstr "素晴らしい、リクエストにOAuth2トークンを提供していないので、エンドポイントにアクセスできないはずなのですが、そうではありませんでした。代わりにHTTP 401 Unauthorizedエラーを受け取りました。エンドポイントにアクセスするためには、有効な OAuth2 トークンを取得して渡す必要があります。これには 2 つのステップがあります。1) {extension-name} エクステンションにトークンの検証方法に関する情報を設定すること、そして 2) 適切な主張を持つマッチングトークンを生成することです。"
 
 #. type: Title ===
 #: upstream/_guides/security-oauth2.adoc:241
@@ -759,7 +759,7 @@ msgstr "OAuth2のイントロスペクトレスポンスを返すことで、 `/
 #: upstream/_guides/security-oauth2.adoc:393
 #, fuzzy
 msgid "As the `start` method returns configuration that applies for tests, we set the `quarkus.oauth2.introspection-url` property that controls the URL of the introspect endpoint used by the OAuth2 extension."
-msgstr "`start` メソッドはテストに適用する設定を返すので、OAuth2 拡張機能で使用する introspect エンドポイントの URL を制御する `quarkus.oauth2.introspection-url` プロパティーを設定します。"
+msgstr "`start` メソッドはテストに適用する設定を返すので、OAuth2 エクステンションで使用する introspect エンドポイントの URL を制御する `quarkus.oauth2.introspection-url` プロパティーを設定します。"
 
 #. type: Plain text
 #: upstream/_guides/security-oauth2.adoc:394
