--- a/l10n/po/ja_JP/_guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cache.adoc.po
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/spring-cache.adoc:6
 #, no-wrap
 msgid "Quarkus - Quarkus Extension for Spring Cache API"
-msgstr "Quarkus - Spring Cache API用のQuarkus拡張機能"
+msgstr "Quarkus - Spring Cache API用のQuarkusエクステンション"
 
 #. type: Plain text
 #: upstream/_guides/spring-cache.adoc:12
