--- a/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
@@ -152,7 +152,7 @@ msgstr "拡張ポイント"
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:60
 #, fuzzy
 msgid "Unfortunately, CDI portable extensions are inherently runtime constructs and therefore cannot be fully supported in Quarkus.  In fact, all CDI extensions are ignored at the moment.  Nevertheless, most of the functionality can be achieved using https://quarkus.io/guides/cdi-reference#build-time-extension-points[Quarkus extensions].  The CDI extensions are encouraged to generalize the code, and if possible provide a Quarkus extension to make full use of build-time metadata processing."
-msgstr "残念ながら、CDIポータブル拡張は本質的にランタイム構造であるため、Quarkusでは完全にサポートされていません。実際、現在のところ、すべてのCDI拡張機能は無視されています。それにもかかわらず、ほとんどの機能は link:https://quarkus.io/guides/cdi-reference#build-time-extension-points[Quarkusの拡張] 機能を使用して達成することができます。CDI拡張はコードを一般化し、可能であればビルド時のメタデータ処理をフルに活用するためのQuarkus拡張を提供することが推奨されています。"
+msgstr "残念ながら、CDIポータブル拡張は本質的にランタイム構造であるため、Quarkusでは完全にサポートされていません。実際、現在のところ、すべてのCDIエクステンションは無視されています。それにもかかわらず、ほとんどの機能は link:https://quarkus.io/guides/cdi-reference#build-time-extension-points[Quarkusの拡張] 機能を使用して達成することができます。CDI拡張はコードを一般化し、可能であればビルド時のメタデータ処理をフルに活用するためのQuarkus拡張を提供することが推奨されています。"
 
 #. type: Title ==
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:61
