--- a/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
@@ -206,7 +206,7 @@ msgstr "OAuth2 拡張"
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:75
 #, fuzzy
 msgid "The new Security OAuth2 extension allows to implement an authentication mechanism based on OAuth2 opaque tokens.  It complements the existing JWT extension by allowing to authenticate a user based on a call to an introspection endpoint instead of decoding the token.  An opaque token is a token with no information encoded in it, so it needs an external call to gather the user information, this external call is made against what is called an introspection endpoint."
-msgstr "新しい Security OAuth2 拡張モジュールは OAuth2 不透明トークンに基づいた認証メカニズムを実装することを可能にします。これは既存の JWT 拡張機能を補完するもので、トークンをデコードするのではなく、イントロスペクションエンドポイントへの呼び出しに基づいてユーザーを認証することを可能にします。不透明なトークンは情報がエンコードされていないトークンなので、ユーザー情報を収集するために外部からの呼び出しが必要となります。"
+msgstr "新しい Security OAuth2 エクステンションは OAuth2 不透明トークンに基づいた認証メカニズムを実装することを可能にします。これは既存の JWT 拡張機能を補完するもので、トークンをデコードするのではなく、イントロスペクションエンドポイントへの呼び出しに基づいてユーザーを認証することを可能にします。不透明なトークンは情報がエンコードされていないトークンなので、ユーザー情報を収集するために外部からの呼び出しが必要となります。"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:77
