--- a/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
@@ -274,7 +274,7 @@ msgstr "非推奨"
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:89
 #, fuzzy
 msgid "The `quarkus-junit4` extension has been retired. You may use the `quarkus-junit5` extension and move your tests to JUnit 5."
-msgstr "`quarkus-junit4` 拡張モジュールは引退しました。 `quarkus-junit5` 拡張モジュールを使って、テストを JUnit 5 に移動することができます。"
+msgstr "`quarkus-junit4` エクステンションは引退しました。 `quarkus-junit5` エクステンションを使って、テストを JUnit 5 に移動することができます。"
 
 #. type: Title ===
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:90
