--- a/l10n/po/ja_JP/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc.po
@@ -142,7 +142,7 @@ msgstr "キャッシュ拡張"
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:53
 #, fuzzy
 msgid "A brand new Cache extension allows to cache the return values of your CDI beans methods.  It is based on Caffeine and comes with a set of annotations to drive it."
-msgstr "新しい Cache 拡張モジュールは、CDI Beanメソッドの戻り値をキャッシュすることができます。これは Caffeine をベースにしており、それを駆動するためのアノテーションのセットが付属しています。"
+msgstr "新しい Cache エクステンションは、CDI Beanメソッドの戻り値をキャッシュすることができます。これは Caffeine をベースにしており、それを駆動するためのアノテーションのセットが付属しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:55
