Translate liquibase.adoc.po

--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -742,7 +742,7 @@ msgstr "link:./flyway[クオークス飛路]"
 #: upstream/_guides/dev-ui.adoc:356
 #, fuzzy
 msgid "link:./liquibase[quarkus-liquibase]"
-msgstr "link:./liquibase[クォークスリキベース]"
+msgstr "link:./liquibase[クォークスLiquibase]"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:357
