--- a/l10n/po/ja_JP/_guides/liquibase.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase.adoc.po
@@ -3,81 +3,74 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-04 00:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/liquibase.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using Liquibase"
 msgstr "Quarkus - Liquibaseの使用"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:13
-#, fuzzy
 msgid "https://www.liquibase.org/[Liquibase] is an open source tool for database schema change management."
-msgstr "link:https://www.liquibase.org/[Liquibaseは] データベーススキーマ変更管理のためのオープンソースツールです。"
+msgstr "link:https://www.liquibase.org/[Liquibase] はデータベーススキーマ変更管理のためのオープンソースツールです。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:15
-#, fuzzy
 msgid "Quarkus provides first class support for using Liquibase as will be explained in this guide."
 msgstr "Quarkusは、このガイドで説明するように、Liquibaseを使用するためのファーストクラスのサポートを提供しています。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase.adoc:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up support for Liquibase"
-msgstr "Liquibaseのサポート設定"
+msgstr "Liquibaseサポートの設定"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:19
-#, fuzzy
 msgid "To start using Liquibase with your project, you just need to:"
-msgstr "Liquibase をあなたのプロジェクトで使い始めるためには、以下のことを行う必要があります。"
+msgstr "Liquibase をプロジェクトで使い始めるためには、以下のことを行う必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:21
-#, fuzzy
 msgid "add your changeLog to the `{change-log}` file as you usually do with Liquibase"
 msgstr "Liquibase で通常行うように、変更ログを `{change-log}` ファイルに追加してください。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:23
-#, fuzzy
 msgid "activate the `migrate-at-start` option to migrate the schema automatically or inject the `Liquibase` object and run your migration as you normally do."
-msgstr "`migrate-at-start` オプションを有効にしてスキーマを自動的に移行するか、 `Liquibase` オブジェクトを注入して通常通りに移行を実行します。"
+msgstr "`migrate-at-start` オプションを有効にしてスキーマを自動的に移行するか、 `Liquibase` オブジェクトをインジェクトして通常通りにマイグレーションを実行します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:25
-#, fuzzy
 msgid "In your `pom.xml`, add the following dependencies:"
-msgstr "あなたの `pom.xml` で、以下の依存関係を追加します。"
+msgstr "`pom.xml` で、以下の依存関係を追加します:"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:27
-#, fuzzy
 msgid "the Liquibase extension"
-msgstr "リキベース拡張"
+msgstr "Liquibaseエクステンション"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:28
-#, fuzzy
 msgid "your JDBC driver extension (`quarkus-jdbc-postgresql`, `quarkus-jdbc-h2`, `quarkus-jdbc-mariadb`, ...)"
-msgstr "お使いの JDBC ドライバーの拡張子 ( `quarkus-jdbc-postgresql` , `quarkus-jdbc-h2` , `quarkus-jdbc-mariadb` , ...)"
+msgstr "お使いの JDBC ドライバーエクステンション ( `quarkus-jdbc-postgresql` , `quarkus-jdbc-h2` , `quarkus-jdbc-mariadb` , ...)"
 
 #. type: delimited block -
 #: upstream/_guides/liquibase.adoc:37
@@ -105,13 +98,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:50
-#, fuzzy
 msgid "Liquibase support relies on the Quarkus datasource config.  It can be customized for the default datasource as well as for every <<multiple-datasources,named datasource>>.  First, you need to add the datasource config to the `{config-file}` file in order to allow Liquibase to manage the schema."
 msgstr "Liquibaseのサポートは、Quarkusのデータソース設定に依存しています。この設定は、デフォルトのデータソースだけでなく、すべての link:#multiple-datasources[名前付きデータソース] 用にカスタマイズすることができます。まず、Liquibaseがスキーマを管理できるようにするために、 `{config-file}` ファイルにデータソース設定を追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:52
-#, fuzzy
 msgid "The following is an example for the `{config-file}` file:"
 msgstr "`{config-file}` ファイルの例は以下の通りです。"
 
@@ -155,7 +146,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:81
-#, fuzzy
 msgid "Add a changeLog file to the default folder following the Liquibase naming conventions: `{change-log}` The yaml, json, xml and sql changeLog file formats are also supported."
 msgstr "Liquibase の命名規則に従って、デフォルトのフォルダーに changeLog ファイルを追加します: `{change-log}` yaml, json, xml, sql changeLog ファイル形式もサポートされています。"
 
@@ -190,9 +180,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:105
-#, fuzzy
 msgid "Now you can start your application and Quarkus will run the Liquibase's update method according to your config:"
-msgstr "これでアプリケーションを起動することができ、Quarkusはあなたの設定に従ってLiquibaseの更新方法を実行します。"
+msgstr "これでアプリケーションを起動することが出来るようになり、Quarkusはあなたの設定に従ってLiquibaseの更新メソッドを実行します:"
 
 #. type: delimited block -
 #: upstream/_guides/liquibase.adoc:109
@@ -226,25 +215,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:125
-#, fuzzy
 msgid "The Quarkus extension provides a factory to initialize a Liquibase instance"
 msgstr "Quarkusエクステンションは、Liquibaseインスタンスを初期化するためのファクトリーを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:126
-#, fuzzy
 msgid "Inject the Quarkus liquibase factory if you want to use the liquibase methods directly"
-msgstr "リキベースメソッドを直接使用したい場合は、Quarkusのリキベースファクトリーをインジェクトします。"
+msgstr "Liquibaseメソッドを直接使用したい場合は、QuarkusのLiquibaseファクトリーをインジェクトします。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase.adoc:127
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Multiple datasources"
 msgstr "複数のデータソース"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:131
-#, fuzzy
 msgid "Liquibase can be configured for multiple datasources.  The Liquibase properties are prefixed exactly the same way as the named datasources, for example:"
 msgstr "Liquibase は複数のデータソースに対して設定することができます。Liquibase のプロパティーは、例えば、名前のついたデータソースと全く同じように接頭辞が付けられます。"
 
@@ -310,33 +296,29 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:167
-#, fuzzy
 msgid "Notice there's an extra bit in the key.  The syntax is as follows: `quarkus.liquibase.[optional name.][datasource property]`."
 msgstr "キーに余分なビットがあることに注意してください。構文は以下の通りです。 `quarkus.liquibase.[optional name.][datasource property]` ."
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:169
-#, fuzzy
 msgid "Without configuration, Liquibase is set up for every datasource using the default settings."
 msgstr "設定をしないと、Liquibaseはデフォルトの設定で各データソースに設定されます。"
 
 #. type: Title ==
 #: upstream/_guides/liquibase.adoc:170
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using the Liquibase object"
-msgstr "Liquibase オブジェクトを使う"
+msgstr "Liquibase オブジェクトの使用"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:173
-#, fuzzy
 msgid "In case you are interested in using the `Liquibase` object directly, you can inject it as follows:"
-msgstr "念のため、 `Liquibase` オブジェクトを直接使いたい場合は、以下のように注入します。"
+msgstr " `Liquibase` オブジェクトを直接使いたい場合は、以下のように注入します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:176
-#, fuzzy
 msgid "If you enabled the `quarkus.liquibase.migrate-at-start` property, by the time you use the Liquibase instance, Quarkus will already have run the migrate operation."
-msgstr "`quarkus.liquibase.migrate-at-start` プロパティーを有効にした場合、Liquibase インスタンスを使用する時点で、Quarkus はすでに移行操作を実行しています。"
+msgstr "`quarkus.liquibase.migrate-at-start` プロパティーを有効にした場合、Liquibase インスタンスを使用する時点で、Quarkus はすでにマイグレーション操作を実行しています。"
 
 #. type: delimited block -
 #: upstream/_guides/liquibase.adoc:180
@@ -392,31 +374,26 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:208
-#, fuzzy
 msgid "Inject the LiquibaseFactory object"
 msgstr "LiquibaseFactory オブジェクトをインジェクトする"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:209
-#, fuzzy
 msgid "Inject Liquibase for named datasources using the Quarkus `LiquibaseDataSource` qualifier"
-msgstr "Quarkus `LiquibaseDataSource` の修飾子を使用して、指定されたデータソースに Liquibase を注入します。"
+msgstr "Quarkus `LiquibaseDataSource` 修飾子を使用して、指定されたデータソースに Liquibase を注入します。"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:210
-#, fuzzy
 msgid "Inject Liquibase for named datasources"
 msgstr "指定されたデータソースに Liquibase を注入する"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:211
-#, fuzzy
 msgid "Use the Liquibase instance directly"
 msgstr "Liquibase インスタンスを直接使う"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:212
-#, fuzzy
 msgid "List of applied or not applied liquibase ChangeSets"
 msgstr "適用された、または適用されていない liquibase ChangeSets のリスト"
 
