Replace "Quarkus" translation to "Quarkus"

--- a/l10n/po/ja_JP/_guides/dev-ui.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-ui.adoc.po
@@ -736,19 +736,19 @@ msgstr "link:./deploying-to-openshift[クォークスオープンシフト]"
 #: upstream/_guides/dev-ui.adoc:355
 #, fuzzy
 msgid "link:./flyway[quarkus-flyway]"
-msgstr "link:./flyway[クオークス飛路]"
+msgstr "link:./flyway[quarkus-flyway]"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:356
 #, fuzzy
 msgid "link:./liquibase[quarkus-liquibase]"
-msgstr "link:./liquibase[クォークスリキベース]"
+msgstr "link:./liquibase[quarkus-liquibase]"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:357
 #, fuzzy
 msgid "link:./openapi-swaggerui[quarkus-smallrye-openapi]"
-msgstr "link:./openapi-swaggerui[クオークススモールライドオープンapi]"
+msgstr "link:./openapi-swaggerui[Quarkusスモールライドオープンapi]"
 
 #. type: Plain text
 #: upstream/_guides/dev-ui.adoc:358
