--- a/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-jpa.adoc.po
@@ -1364,7 +1364,7 @@ msgstr "link:spring-cache[Quarkus - Spring Cacheの拡張機能]"
 #: upstream/_guides/spring-data-jpa.adoc:633
 #, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
-msgstr "link:spring-scheduled[クオークス - 春の予定延長]"
+msgstr "link:spring-scheduled[Quarkus - 春の予定延長]"
 
 #. type: Plain text
 #: upstream/_guides/spring-data-jpa.adoc:633
