--- a/l10n/po/ja_JP/_posts/2019-10-01-quarkus-newsletter-1.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-01-quarkus-newsletter-1.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: 'Quarkus Newsletter #1'\n"
 "date: 2019-10-01\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: \"pub.date <= '2019-10-01'\"\n"
 "---\n"
@@ -60,7 +60,7 @@ msgstr "何かが不足していると感じた場合、または今後のQuarku
 #: upstream/_posts/2019-10-01-quarkus-newsletter-1.adoc:16
 #, fuzzy
 msgid "In this first edition I've gathered list of interesting publications since the launch of Quarkus back in March 2019."
-msgstr "今回の初版では、2019年3月にクオークスが発売されてからの面白い出版物を集めてみました。"
+msgstr "今回の初版では、2019年3月にQuarkusが発売されてからの面白い出版物を集めてみました。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-01-quarkus-newsletter-1.adoc:17
