--- a/l10n/po/ja_JP/_posts/2020-01-14-quarkus-newsletter-4.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-14-quarkus-newsletter-4.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: クォークス・ニュースレター第4号\n"
 "date: 2020-01-14\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate >= '2019-12-17'\", \"pub.urldate <= '2020-01-14'\"]\n"
 "---\n"
