--- a/l10n/po/ja_JP/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc.po
@@ -608,7 +608,7 @@ msgstr ""
 #: upstream/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc:214
 #, fuzzy
 msgid "For more information about the Qute templating engine, please refer to the https://quarkus.io/guides/qute[Quarkus templating engine guide]."
-msgstr "Quteのテンプレエンジンについては、 link:https://quarkus.io/guides/qute[クオークスのテンプレエンジンガイドを] ご覧ください。"
+msgstr "Quteのテンプレエンジンについては、 link:https://quarkus.io/guides/qute[Quarkusのテンプレエンジンガイドを] ご覧ください。"
 
 #. type: Title ==
 #: upstream/_posts/2020-01-28-vscode-quarkus-1.3.0.adoc:216
