--- a/l10n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc.po
@@ -58,7 +58,7 @@ msgstr "Alphas/CRをテストし、フィードバックを提供してくださ
 #: upstream/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc:18
 #, fuzzy
 msgid "Two months? That's a lot in the Quarkus world so expect a whole lot of new things."
-msgstr "2ヶ月?クオークスの世界では多いですから、新しいことに期待してください。"
+msgstr "2ヶ月?Quarkusの世界では多いですから、新しいことに期待してください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-03-19-quarkus-1-3-0-final-released.adoc:20
