--- a/l10n/po/ja_JP/_posts/2020-04-29-mocking.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-29-mocking.adoc.po
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'クオークスのCDI Beanをあざ笑う'\n"
+"title: 'QuarkusのCDI Beanをあざ笑う'\n"
 "date: 2020-04-28\n"
 "tags: testing\n"
 "synopsis: Quarkus 1.4では、CDI Beanをモックするための興味深い新機能が導入されています。\n"
