--- a/l10n/po/ja_JP/_posts/2020-06-15-quarkus-hackathon-announcement.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-15-quarkus-hackathon-announcement.adoc.po
@@ -82,7 +82,7 @@ msgstr "などなど、様々な参加方法があります。"
 #: upstream/_posts/2020-06-15-quarkus-hackathon-announcement.adoc:23
 #, fuzzy
 msgid "https://quarkus.devpost.com/[Register] and submit an application showcasing the “greatness” of Quarkus"
-msgstr "クオークスの「すごさ」をアピールするアプリを link:https://quarkus.devpost.com/[登録して] 投稿する"
+msgstr "Quarkusの「すごさ」をアピールするアプリを link:https://quarkus.devpost.com/[登録して] 投稿する"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-15-quarkus-hackathon-announcement.adoc:25
