--- a/l10n/po/ja_JP/_posts/2020-08-25-backports-application.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-08-25-backports-application.adoc.po
@@ -359,7 +359,7 @@ msgstr "Quarkus Backportsのソース: https://github.com/quarkusio/quarkus-back
 #: upstream/_posts/2020-08-25-backports-application.adoc:117
 #, fuzzy
 msgid "Quarkus website: https://quarkus.io"
-msgstr "クオークスのウェブサイト: https://quarkus.io"
+msgstr "Quarkusのウェブサイト: https://quarkus.io"
 
 #. type: Plain text
 #: upstream/_posts/2020-08-25-backports-application.adoc:118
@@ -371,7 +371,7 @@ msgstr "Quarkus GitHubプロジェクト: https://github.com/quarkusio/quarkus"
 #: upstream/_posts/2020-08-25-backports-application.adoc:119
 #, fuzzy
 msgid "Quarkus Twitter: https://twitter.com/QuarkusIO"
-msgstr "クオークス ツイッター: https://twitter.com/QuarkusIO"
+msgstr "Quarkus ツイッター: https://twitter.com/QuarkusIO"
 
 #. type: Plain text
 #: upstream/_posts/2020-08-25-backports-application.adoc:120
