--- a/l10n/po/ja_JP/_posts/2020-09-15-quarkus-1-8-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-15-quarkus-1-8-0-final-released.adoc.po
@@ -46,7 +46,7 @@ msgstr ""
 #: upstream/_posts/2020-09-15-quarkus-1-8-0-final-released.adoc:11
 #, fuzzy
 msgid "We have been hard at work during Summer to bake Quarkus 1.8."
-msgstr "夏の間、クオークス1.8を焼くために頑張ってきました。"
+msgstr "夏の間、Quarkus1.8を焼くために頑張ってきました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-15-quarkus-1-8-0-final-released.adoc:13
