--- a/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
@@ -349,7 +349,7 @@ msgstr "link:spring-cache[Quarkus - Spring Cacheのエクステンション]"
 #: upstream/_guides/spring-cloud-config-client.adoc:158
 #, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
-msgstr "link:spring-scheduled[クオークス - 春の予定延長]"
+msgstr "link:spring-scheduled[Quarkus - 春の予定延長]"
 
 #. type: Title ==
 #: upstream/_guides/spring-cloud-config-client.adoc:160
