--- a/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
@@ -1042,4 +1042,4 @@ msgstr "link:spring-cache[Quarkus - Spring Cacheの拡張機能]"
 #: upstream/_guides/spring-data-rest.adoc:441
 #, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
-msgstr "link:spring-scheduled[クオークス - 春の予定延長]"
+msgstr "link:spring-scheduled[Quarkus - 春の予定延長]"
