--- a/l10n/po/ja_JP/_guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-web.adoc.po
@@ -1038,4 +1038,4 @@ msgstr "link:spring-cache[Quarkus - Spring Cacheの拡張機能]"
 #: upstream/_guides/spring-web.adoc:525
 #, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
-msgstr "link:spring-scheduled[クオークス - 春の予定延長]"
+msgstr "link:spring-scheduled[Quarkus - 春の予定延長]"
