--- a/l10n/po/ja_JP/_posts/2019-11-18-quarkus-newsletter-2.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-18-quarkus-newsletter-2.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: Quarkus Newsletter #2\n"
 "date: 2019-11-18\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate >= '2019-10-01'\", \"pub.urldate <= '2019-11-19'\"]\n"
 "---\n"
