--- a/l10n/po/ja_JP/_posts/2019-12-16-quarkus-newsletter-3.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-12-16-quarkus-newsletter-3.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: クォークス・ニュースレター第3号\n"
 "date: 2019-12-16\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate >= '2019-11-20'\", \"pub.urldate <= '2019-12-16'\"]\n"
 "---\n"
