--- a/l10n/po/ja_JP/_posts/2020-05-07-quarkus-newsletter-6.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-05-07-quarkus-newsletter-6.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: クォークス・ニュースレター第6号\n"
 "date: 2020-05-07\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate >= '2020-02-26'\", \"pub.urldate <= '2020-05-03'\"]\n"
 "---\n"
