--- a/l10n/po/ja_JP/_posts/2020-08-18-quarkus-hackathon-finalist-announcement.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-08-18-quarkus-hackathon-finalist-announcement.adoc.po
@@ -134,7 +134,7 @@ msgstr "link:https://devpost.com/software/brightact-app-againt-domestic-violence
 #: upstream/_posts/2020-08-18-quarkus-hackathon-finalist-announcement.adoc:37
 #, fuzzy, no-wrap
 msgid "https://devpost.com/software/test-dy4jlx[*Quarkus Classify*]"
-msgstr "link:https://devpost.com/software/test-dy4jlx[*クオークスのクラシフィケーション*]"
+msgstr "link:https://devpost.com/software/test-dy4jlx[*Quarkusのクラシフィケーション*]"
 
 #. type: Title ===
 #: upstream/_posts/2020-08-18-quarkus-hackathon-finalist-announcement.adoc:39
