--- a/l10n/po/ja_JP/_posts/2020-09-28-quarkus-newsletter-8.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-28-quarkus-newsletter-8.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: 'Quarkus Newsletter #8'\n"
 "date: 2020-09-28\n"
 "tags: newsletter\n"
-"synopsis: クオークス周辺の最新オンラインコンテンツ\n"
+"synopsis: Quarkus周辺の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate > '2020-06-25'\", \"pub.urldate <= '2020-09-28'\"]\n"
 "---\n"
