--- a/l10n/po/ja_JP/_posts/2021-01-26-quarkus-newsletter-9.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-01-26-quarkus-newsletter-9.adoc.po
@@ -39,7 +39,7 @@ msgstr ""
 "title: 'Quarkus ニュースレター #9'\n"
 "date: 2021-01-29\n"
 "tags: newsletter\n"
-"synopsis: クオークス関連の最新オンラインコンテンツ\n"
+"synopsis: Quarkus関連の最新オンラインコンテンツ\n"
 "author: maxandersen\n"
 "bibquery: [\"pub.urldate > '2020-09-28'\", \"pub.urldate <= '2021-01-29'\"]\n"
 "---\n"
