Replace "Spring" translations to "Spring"

--- a/l10n/po/ja_JP/_posts/insights_1_transcription.adoc.po
+++ b/l10n/po/ja_JP/_posts/insights_1_transcription.adoc.po
@@ -632,7 +632,7 @@ msgstr "さて、どうやって呼び出すか、どうやって使うか、こ
 #: upstream/_posts/insights_1_transcription.adoc:206
 #, fuzzy
 msgid "I don't know Emmanuel, I don't know what your thoughts are on what this is supposed to call in the Spring world. We call this controller. I guess, here, in Quarkus we've been using resource, but I know talking to Stephane he didn't really like that name. So I know what you guys think what your opinion is."
-msgstr "エマニュエルは知らないが、春の世界ではこれを何と呼ぶのか、君の考えは知らない。私たちはこれをコントローラと呼んでいます。ここでは、Quarkusではresourceを使っていますが、ステファンと話していると、彼はその名前が好きではなかったようです。だから、あなたたちがどう思っているのか、あなたたちの意見を知っています。"
+msgstr "エマニュエルは知らないが、Springの世界ではこれを何と呼ぶのか、君の考えは知らない。私たちはこれをコントローラと呼んでいます。ここでは、Quarkusではresourceを使っていますが、ステファンと話していると、彼はその名前が好きではなかったようです。だから、あなたたちがどう思っているのか、あなたたちの意見を知っています。"
 
 #. type: Plain text
 #: upstream/_posts/insights_1_transcription.adoc:208
