--- a/l10n/po/ja_JP/_guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-di.adoc.po
@@ -778,4 +778,4 @@ msgstr "link:spring-cache[Quarkus - Spring Cacheの拡張機能]"
 #: upstream/_guides/spring-di.adoc:347
 #, fuzzy
 msgid "link:spring-scheduled[Quarkus - Extension for Spring Scheduled]"
-msgstr "link:spring-scheduled[Quarkus - 春の予定延長]"
+msgstr "link:spring-scheduled[Quarkus - Spring Scheduledのためのエクステンション]"
